Bug 289835 - The face group widget is not displayed when reentering the ImagePreviewView
Summary: The face group widget is not displayed when reentering the ImagePreviewView
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.5.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 10:02 UTC by Andi Clemens
Modified: 2017-08-15 21:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2011-12-26 10:02:34 UTC
Version:           2.5.0 (using KDE 4.7.3) 
OS:                Linux

If the "Show Face Tags" action has been checked and the ImagePreviewView was closed and than opened again (for the same image), the face tags are shown, although the action was checked.

Reproducible: Always

Steps to Reproduce:
1. Open Image
2. Toggle "Show Face Tags"
3. Close the preview by clicking on the image
4. Open the preview for the same image

Actual Results:  
The face tags are not shown anymore, although the action is still checked

Expected Results:  
The face tags should be visible

OS: Linux (i686) release 3.1.5-1-ARCH
Compiler: gcc
Comment 1 Andi Clemens 2011-12-26 10:05:33 UTC
Git commit 62d2843072261b2b59ac89229b5aa4b18b0351ae by Andi Clemens.
Committed on 26/12/2011 at 11:02.
Pushed by aclemens into branch 'master'.

Reimplement showEvent() to display face tags, if the toggle action has been checked.

If the action has been checked and the ImagePreviewView was closed and than opened again (for the same image), the face tags have not been shown, although the action was checked.
Trigger setFocus for the face tags widget in the showEvent().
Related: bug 289835

M  +15   -5    digikam/views/imagepreviewview.cpp
M  +1    -0    digikam/views/imagepreviewview.h

http://commits.kde.org/digikam/62d2843072261b2b59ac89229b5aa4b18b0351ae