Reimplement showEvent() to display face tags, if the toggle action has been checked.

If the action has been checked and the ImagePreviewView was closed and than opened again (for the same image), the face tags have not been shown, although the action was checked.
Trigger setFocus for the face tags widget in the showEvent().

BUG:289835